<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.t4fris.fragments.HomeFragment"
        android:label="@string/titleExplore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_friscard"
        android:name="com.example.t4fris.fragments.FriscardFragment"
        android:label="@string/titleFriscard"
        tools:layout="@layout/fragment_friscard" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.t4fris.fragments.MapFragment"
        android:label="@string/titleMap"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.t4fris.fragments.ProfileFragment"
        android:label="@string/titleProfile"
        tools:layout="@layout/fragment_profile" />
</navigation>