<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">


    <HorizontalScrollView
        android:id="@+id/list_of_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rollIce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/headline"
            android:text="@string/rollIce"
            android:layout_marginRight="@dimen/medMargin"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/milkshake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/headline"
            android:text="@string/milkshake"
            android:layout_marginRight="@dimen/medMargin"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fris_blue"
            android:textSize="@dimen/headline"
            android:text="@string/coffee"
            android:layout_marginRight="@dimen/medMargin"
            android:textStyle="bold"/>

        </LinearLayout>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_of_items">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/vanilla"
                android:layout_width="120dp"
                android:layout_height="230dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="@string/van"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/medCorner" />

            <Button
                android:id="@+id/strawB"
                android:layout_width="120dp"
                android:layout_height="230dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="@string/strawB"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/medCorner"/>

            <Button
                android:id="@+id/choco"
                android:layout_width="120dp"
                android:layout_height="230dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="@string/choco"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/medCorner"/>

            <Button
                android:id="@+id/blackB"
                android:layout_width="120dp"
                android:layout_height="230dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="@string/blackB"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/medCorner"/>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/popular_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/order_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recent_button"
        android:textColor="@color/fris_blue"
        android:text="@string/popularEx"
        android:textSize="@dimen/headline"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/recent_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/order_list"
        app:layout_constraintStart_toEndOf="@id/popular_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/fris_blue"
        android:text="@string/viewedRecentlyEx"
        android:textSize="@dimen/headline"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/popular_recent_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/smallMargin"
        app:layout_constraintTop_toBottomOf="@id/popular_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="@dimen/smallMargin"
            android:orientation="vertical">

            <Button
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="First"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/bigCorner"/>

            <Button
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="second"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/bigCorner"/>

            <Button
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="Third"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/bigCorner"/>

            <Button
                android:id="@+id/fourth"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/smallMargin"
                android:text="Fourth"
                android:textColor="@color/fris_white"
                app:backgroundTint="@color/fris_blue"
                app:cornerRadius="@dimen/bigCorner"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>